@@ -6,6 +6,8 @@ Changes in @NEW@:
       for the label on which the product definition trove lives,
       the source trove for the package definition will now be signed.
       (RPCL-68)
+    * Saving the product definition to the repository now preserves
+      additional files that were published in the trove. (RPCL-69)
 
 Changes in 1.0:
   o General Availability
